--- a/src/styles/Schedule.css
+++ b/src/styles/Schedule.css
@@ -1,14 +1,14 @@
 .schedule-page {
-  height: 155vh;
   background-color: black;
   color: white;
+  margin-bottom: 60px;
 }
 .schedule-page .schedule-content {
   height: 100%;
   color: white;
 }
 .schedule-page .schedule-header {
-  height: 15vh;
+  height: 5vh;
 }
 .schedule-page .schedule-title {
   font-family: "Fredoka One", cursive;
@@ -101,60 +101,4 @@
 .schedule-event .col:last-child {
   flex-basis: 60%;
   border-left: 3px solid white;
-}
-
-.schedule-page .container:after {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: #db35f1;
-  border: 14px solid #db35f1;
-  top: 25px;
-  border-radius: 50%;
-  z-index: 1;
-}
-
-/* Place the container to the left */
-.schedule-page .left {
-  left: 0;
-}
-
-/* Place the container to the right */
-.schedule-page .right {
-  left: 50%;
-}
-
-/* Add arrows to the left container (pointing right) */
-.schedule-page .left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
-}
-
-/* Add arrows to the right container (pointing left) */
-.schedule-page .right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-}
-
-/* Fix the circle for containers on the right side */
-.schedule-page .right::after {
-  left: -16px;
 }
